generating mock data for reg system and printing info to console