@@ -14,6 +14,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+<repositories>
+	<repository>
+	    <id>jitpack.io</id>
+	    <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,15 +30,28 @@
     </dependency>
     <dependency>
 	    <groupId>com.github.cliona-murphy</groupId>
-	    <artifactId>mock-reg-system</artifactId>
-	    <version>jitpack-release</version>
+	    <artifactId>reg_system</artifactId>
+	    <version>jitpack-release3</version>
 	</dependency>
+	<dependency>
+        <groupId>org.apache.maven.surefire</groupId>
+        <artifactId>surefire-junit47</artifactId>
+        <version>3.0.0-M5</version>
+      </dependency>
   </dependencies>
   
-  <repositories>
-	<repository>
-	    <id>jitpack.io</id>
-	    <url>https://jitpack.io</url>
-    </repository>
-  </repositories>
+  <build>
+	  <plugins>
+	  	<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-surefire-plugin</artifactId>
+		  <version>3.0.0-M5</version>
+		  <configuration>
+		    <forkCount>3</forkCount>
+		    <reuseForks>true</reuseForks>
+		    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+		  </configuration>
+		</plugin>
+	  </plugins>
+  </build>
 </project>
